--- a/build.gradle
+++ b/build.gradle
@@ -31,9 +31,10 @@ dependencies {
 		compile group: 'log4j', name: 'log4j', version: '1.2.16'
 		compile group: 'org.hibernate', name: 'hibernate-entitymanager', version: '3.6.0.Beta2', ext: 'jar'
 		compile group: 'jboss', name: 'javassist', version: '3.1'
+		compile group: 'cglib', name: 'cglib-nodep', version: '2.2'
 		testCompile group: 'junit', name: 'junit', version: '4.8'
-		testCompile group: 'org.mockito', name: 'mockito-all', version: '1.8.5'
 		testCompile group: 'org.hsqldb', name: 'hsqldb', version: '2.0.0'
+		testCompile group: 'org.mockito', name: 'mockito-all', version: '1.8.5'
 		lib = "$projectDir/lib"
 		compile files(fileTree(dir: lib as File, includes: ['*.jar']))
 }
